<resources>
    <string name="app_name">Kim\'s Game</string>
    <string name="action_settings">Settings</string>

    <string-array name="companies">
        <item>Apple</item>
        <item>Microsoft</item>
        <item>Sony</item>
        <item>Nintendo</item>
        <item>Intel</item>
        <item>Nvidia</item>
        <item>Lenovo</item>
        <item>Hewlett Packard</item>
    </string-array>

    <string name="about_txtDescription">This application simulates Kim\'s Game. It was made for the second assignment of the PG4600 course.\n\nRead more about Kim\'s Game here:</string>
    <string name="about_txtTitle">Kim\'s Game</string>
    <string name="about_txtAuthor">By Jonas Jensen</string>
    <string name="about_txtAuthorMail">jenjon13@student.westerdals.no</string>
    <string name="about_txtWikilink">http://en.wikipedia.org/wiki/Kim%27s_Game</string>
    <string name="titlescreen_btnNewGame">New Game</string>
    <string name="titlescreen_btnHighscores">Highscores</string>
    <string name="titlescreen_btnAbout">About</string>
    <string name="btnBack">Back</string>
    <string name="highscore_txtNewHighScore">New highscore!</string>
    <string name="highscore_txtYourName">Your name</string>
    <string name="highscore_txtSave">Save</string>
</resources>
