<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin">

    <Button
        android:id="@+id/btnBackAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Back"/>

    <TextView
        android:id="@+id/txtDescriptionAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/about_txtDescription"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:id="@+id/txtWikilinkAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtDescriptionAbout"
        android:autoLink="web"
        android:text="@string/about_txtWikilink"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

    <TextView
        android:id="@+id/txtTitleAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/about_txtTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/txtAuthorAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitleAbout"
        android:layout_centerHorizontal="true"
        android:text="@string/about_txtAuthor"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/txtAuthorMailAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAuthorAbout"
        android:layout_centerHorizontal="true"
        android:text="@string/about_txtAuthorMail"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
</RelativeLayout>
