<RelativeLayout
    android:id="@+id/fragmentTitleScreenLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context="no.wact.jenjon13.assignment2.game.fragments.TitleScreenFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlescreen_btnNewGame"/>

        <Button
            android:id="@+id/btnHighscore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlescreen_btnHighscores"/>

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlescreen_btnAbout"/>

    </LinearLayout>
</RelativeLayout>
